--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">Home</a>
-                <a href="">About</a>
+                <a href="explore.html">About</a>
                 <a href="">Contact Us</a>
               </div>
             </div>
