--- a/explore.html
+++ b/explore.html
@@ -53,7 +53,7 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="explore.html">Explore</a>
                 <a href="contact.html">Contact Us</a>
               </div>
             </div>
