Moved highlights to before food

--- a/restaurants/Wendys.html
+++ b/restaurants/Wendys.html
@@ -65,57 +65,6 @@
     <!-- end header section -->
   </div>
 
-  <!-- about section -->
-
-  
-  <section class="restaurant_section layout_padding">
-    <div class="logo_image">
-        <img src="../images/Wendys.png" alt="">
-    </div>
-    <div class="food_table">
-        <table class="styled-table">
-            <thead>
-                <tr>
-                    <th>Item</th>
-                    <th>Calories</th>
-                    <th>Score</th>
-                    <th>Price</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Dave's Single</td>
-                    <td class="calorie-cell"></td>
-                    <td class="score-cell"></td>
-                    <td class="price-cell"></td>
-                </tr>
-                <tr>
-                    <td>Dave's Double</td>
-                    <td class="calorie-cell"></td>
-                    <td class="score-cell"></td>
-                    <td class="price-cell"></td>
-                </tr>
-                <tr>
-                    <td>Dave's Triple</td>
-                    <td class="calorie-cell"></td>
-                    <td class="score-cell"></td>
-                    <td class="price-cell"></td>
-                </tr>
-                <tr>
-                    <td>Baconator</td>
-                    <td class="calorie-cell"></td>
-                    <td class="score-cell"></td>
-                    <td class="price-cell"></td>
-                </tr>
-                <!-- and so on... -->
-            </tbody>
-        </table>
-    </div>
-    
-  </section>
-
-  <!-- end about section -->
-
   <!-- highlights section -->
 
   <section class="highlights_section layout_padding">
@@ -182,6 +131,58 @@
   </section>
 
   <!-- end highlights section -->
+
+
+  <!-- food section -->
+  <section class="restaurant_section layout_padding">
+    <div class="logo_image">
+        <img src="../images/Wendys.png" alt="">
+    </div>
+    <div class="food_table">
+        <table class="styled-table">
+            <thead>
+                <tr>
+                    <th>Item</th>
+                    <th>Calories</th>
+                    <th>Score</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Dave's Single</td>
+                    <td class="calorie-cell"></td>
+                    <td class="score-cell"></td>
+                    <td class="price-cell"></td>
+                </tr>
+                <tr>
+                    <td>Dave's Double</td>
+                    <td class="calorie-cell"></td>
+                    <td class="score-cell"></td>
+                    <td class="price-cell"></td>
+                </tr>
+                <tr>
+                    <td>Dave's Triple</td>
+                    <td class="calorie-cell"></td>
+                    <td class="score-cell"></td>
+                    <td class="price-cell"></td>
+                </tr>
+                <tr>
+                    <td>Baconator</td>
+                    <td class="calorie-cell"></td>
+                    <td class="score-cell"></td>
+                    <td class="price-cell"></td>
+                </tr>
+                <!-- and so on... -->
+            </tbody>
+        </table>
+    </div>
+    
+  </section>
+
+  <!-- end food section -->
+
+  
 
 
 
