dave's singles work

--- a/restaurants/Wendys.html
+++ b/restaurants/Wendys.html
@@ -205,7 +205,7 @@
         }
     });
     
-    const scores = [90,100,80,90]; 
+    const scores = []; 
 
     const scoreCells = document.querySelectorAll('.score-cell');
 
