Added more items and working bars

--- a/explore.html
+++ b/explore.html
@@ -149,7 +149,55 @@
 
   <!-- end highlights section -->
 
+<!-- contact section -->
 
+<section class="contact_section layout_padding-top">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-5 offset-md-1">
+        <div class="form_container">
+          <div class="heading_container">
+            <img src="images/heading-img.png" alt="">
+            <h2>
+              Submit Review
+            </h2>
+            <p>
+              Please fill out the following form if you would like to contribute!
+            </p>
+          </div>
+          <form action="">
+            <div>
+              <input type="text" placeholder="Full Name " />
+            </div>
+            <div>
+              <input type="text" placeholder="Phone number" />
+            </div>
+            <div>
+              <input type="email" placeholder="Email" />
+            </div>
+            <div>
+              <input type="text" class="message-box" placeholder="Blog Post" />
+            </div>
+            <div class="d-flex ">
+              <button>
+                SEND
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="col-md-6 px-0">
+        <div class="map_container">
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.965780761865!2d-77.0146384233355!3d39.018585571698466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7cf586f9b73d5%3A0xc227c473fffb50c7!2sMontgomery%20Blair%20High%20School!5e1!3m2!1sen!2sus!4v1722221135528!5m2!1sen!2sus" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- end contact section -->
 
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
