--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">Home</a>
-                <a href="explore.html">About</a>
-                <a href="">Contact Us</a>
+                <a href="explore.html">Explore</a>
+                <a href="contact.html">Contact Us</a>
               </div>
             </div>
           </div>
