--- a/restaurants/Wendys/baconator.html
+++ b/restaurants/Wendys/baconator.html
@@ -65,20 +65,19 @@
           </div>
 
           <div class="Food-Title">
-            <h1>Dave's Single</h1>
+            <h1>Baconator</h1>
           </div>
-          
+
         <div class="specificFood">
-            
             <div class="image-section">
-                <img src="images/davesSingle.png" alt="Food Image">
+                <img src="images/baconator.png" alt="Food Image">
                 <div class="color-palette">
                     <!-- Example color palette colors -->
-                    <div class="color-item" style="background-color: #969A40;" title="#969A40"></div>
-                    <div class="color-item" style="background-color: #AA4F2E;" title="#AA4F2E"></div>
-                    <div class="color-item" style="background-color: #505126;" title="#505126"></div>
-                    <div class="color-item" style="background-color: #A57011;" title="#A57011"></div>
-                    <div class="color-item" style="background-color: #BA773A;" title="#BA773A"></div>
+                    <div class="color-item" style="background-color: #CE8945;" title="#CE8945"></div>
+                    <div class="color-item" style="background-color: #681F15;" title="#681F15"></div>
+                    <div class="color-item" style="background-color: #E49F46;" title="#E49F46"></div>
+                    <div class="color-item" style="background-color: #BE4B26;" title="#BE4B26"></div>
+                    <div class="color-item" style="background-color: #683323;" title="#683323"></div>
                 </div>
             </div>
             <div class="rating-section">
@@ -101,9 +100,9 @@
                         <div class="label">Appearance</div>
                         <div class="rating-bar" data-value="90"></div>
                         <div class="label">Calories</div>
-                        <div class="label">590</div>
+                        <div class="label">960</div>
                         <div class="label">Price</div>
-                        <div class="label">$6.59</div>
+                        <div class="label">$8.49</div>
                     </div>
                 </div>
 
