--- a/restaurants/Wendys/davesDouble.html
+++ b/restaurants/Wendys/davesDouble.html
@@ -65,20 +65,18 @@
           </div>
 
           <div class="Food-Title">
-            <h1>Dave's Single</h1>
+            <h1>Dave's Double</h1>
           </div>
-          
         <div class="specificFood">
-            
             <div class="image-section">
-                <img src="images/davesSingle.png" alt="Food Image">
+                <img src="images/davesDouble.png" alt="Food Image">
                 <div class="color-palette">
                     <!-- Example color palette colors -->
-                    <div class="color-item" style="background-color: #969A40;" title="#969A40"></div>
-                    <div class="color-item" style="background-color: #AA4F2E;" title="#AA4F2E"></div>
-                    <div class="color-item" style="background-color: #505126;" title="#505126"></div>
-                    <div class="color-item" style="background-color: #A57011;" title="#A57011"></div>
-                    <div class="color-item" style="background-color: #BA773A;" title="#BA773A"></div>
+                    <div class="color-item" style="background-color: #AB0000;" title="#AB0000"></div>
+                    <div class="color-item" style="background-color: #000000;" title="#000000"></div>
+                    <div class="color-item" style="background-color: #899139;" title="#899139"></div>
+                    <div class="color-item" style="background-color: #D09A3B;" title="#D09A3B"></div>
+                    <div class="color-item" style="background-color: #E0CEB5;" title="#E0CEB5"></div>
                 </div>
             </div>
             <div class="rating-section">
@@ -101,9 +99,9 @@
                         <div class="label">Appearance</div>
                         <div class="rating-bar" data-value="90"></div>
                         <div class="label">Calories</div>
-                        <div class="label">590</div>
+                        <div class="label">860</div>
                         <div class="label">Price</div>
-                        <div class="label">$6.59</div>
+                        <div class="label">$7.79</div>
                     </div>
                 </div>
 
