--- a/contact.html
+++ b/contact.html
@@ -35,30 +35,20 @@
             <img src="images/logo.png" alt="">
           </a>
           <div class="" id="">
-            <div class="User_option">
-              <form class="form-inline my-2  mb-3 mb-lg-0">
-                <input type="search" placeholder="Search">
-                <button class="btn   my-sm-0 nav_search-btn" type="submit"></button>
-              </form>
-            </div>
-
             <div class="custom_menu-btn">
               <button onclick="openNav()">
                 <span class="s-1">
-
                 </span>
                 <span class="s-2">
-
                 </span>
                 <span class="s-3">
-
                 </span>
               </button>
             </div>
             <div id="myNav" class="overlay">
               <div class="overlay-content">
                 <a href="index.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="explore.html">Explore</a>
                 <a href="contact.html">Contact Us</a>
               </div>
             </div>
@@ -69,156 +59,57 @@
     <!-- end header section -->
   </div>
 
-  <!-- contact section -->
+<!-- contact section -->
 
-  <section class="contact_section layout_padding-top">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-5 offset-md-1">
-          <div class="form_container">
-            <div class="heading_container">
-              <img src="images/heading-img.png" alt="">
-              <h2>
-                Request A Call Back
-              </h2>
-              <p>
-                It is a long established fact that a reader will be distracted by the
-              </p>
-            </div>
-            <form action="">
-              <div>
-                <input type="text" placeholder="Full Name " />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone number" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="d-flex ">
-                <button>
-                  SEND
-                </button>
-              </div>
-            </form>
+<section class="contact_section layout_padding-top">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-5 offset-md-1">
+        <div class="form_container">
+          <div class="heading_container">
+            <img src="images/heading-img.png" alt="">
+            <h2>
+              Submit Review
+            </h2>
+            <p>
+              Please fill out the following form if you would like to contribute!
+            </p>
+            <p>We cannot confirm that your submission will be posted.</p>
+            <p>Please email foodmeetsbusiness@gmail.com (temporary) for more information</p>
           </div>
-        </div>
-        <div class="col-md-6 px-0">
-          <div class="map_container">
-            <div class="map-responsive">
-              <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end contact section -->
-
-
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-3">
-          <div class="info_contact">
-            <h5>
-              CONTACT INFO
-            </h5>
+          <form action="">
             <div>
-              <img src="images/call.png" alt="" />
-              <p>
-                +01 1234567890
-              </p>
+              <input type="text" placeholder="Full Name " />
             </div>
             <div>
-              <img src="images/mail.png" alt="" />
-              <p>
-                demo@gmail.com
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_time">
-            <h5>
-              Opening Hours Shop
-            </h5>
-            <div>
-              <p>
-                Monday to friday
-              </p>
+              <input type="text" placeholder="Phone number" />
             </div>
             <div>
-              <p>
-                07:00 am to 04:00 pm
-              </p>
+              <input type="email" placeholder="Email" />
             </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-3">
-          <div class="info_social">
-            <h5>
-              social media
-            </h5>
-            <div class="social_container">
-              <div>
-                <a href="">
-                  <img src="images/fb.png" alt="" />
-                </a>
-              </div>
-              <div>
-                <a href="">
-                  <img src="images/twitter.png" alt="" />
-                </a>
-              </div>
-              <div>
-                <a href="">
-                  <img src="images/linkedin.png" alt="" />
-                </a>
-              </div>
-              <div>
-                <a href="">
-                  <img src="images/instagram.png" alt="" />
-                </a>
-              </div>
+            <div>
+              <input type="text" class="message-box" placeholder="Blog Post" />
             </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="info_form pl-lg-4">
-            <h5>
-              Newsletter
-            </h5>
-            <form action="">
-              <input type="text" placeholder="Enter Your Email" />
-              <button type="submit">
-                Subscribe
+            <div class="d-flex ">
+              <button>
+                SEND
               </button>
-            </form>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="col-md-6 px-0">
+        <div class="map_container">
+          <div class="map-responsive">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3890.965780761865!2d-77.0146384233355!3d39.018585571698466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7cf586f9b73d5%3A0xc227c473fffb50c7!2sMontgomery%20Blair%20High%20School!5e1!3m2!1sen!2sus!4v1722221135528!5m2!1sen!2sus" width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%" allowfullscreen></iframe>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- end info_section -->
-
-
-  <!-- footer section -->
-  <section class="container-fluid footer_section ">
-    <p>
-      &copy; 2019 All Rights Reserved. Design by
-      <a href="https://html.design/">Free Html Templates</a>
-    </p>
-  </section>
-  <!-- end  footer section -->
-
+<!-- end contact section -->
 
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
