--- a/restaurants/Wendys/davesTriple.html
+++ b/restaurants/Wendys/davesTriple.html
@@ -65,20 +65,18 @@
           </div>
 
           <div class="Food-Title">
-            <h1>Dave's Single</h1>
+            <h1>Dave's Triple</h1>
           </div>
-          
         <div class="specificFood">
-            
             <div class="image-section">
-                <img src="images/davesSingle.png" alt="Food Image">
+                <img src="images/davesTriple.png" alt="Food Image">
                 <div class="color-palette">
                     <!-- Example color palette colors -->
-                    <div class="color-item" style="background-color: #969A40;" title="#969A40"></div>
-                    <div class="color-item" style="background-color: #AA4F2E;" title="#AA4F2E"></div>
-                    <div class="color-item" style="background-color: #505126;" title="#505126"></div>
-                    <div class="color-item" style="background-color: #A57011;" title="#A57011"></div>
-                    <div class="color-item" style="background-color: #BA773A;" title="#BA773A"></div>
+                    <div class="color-item" style="background-color: #D8B485;" title="#D8B485"></div>
+                    <div class="color-item" style="background-color: #925A31;" title="#925A31"></div>
+                    <div class="color-item" style="background-color: #FF0000;" title="#FF0000"></div>
+                    <div class="color-item" style="background-color: #A79B46;" title="#A79B46"></div>
+                    <div class="color-item" style="background-color: #675529;" title="#675529"></div>
                 </div>
             </div>
             <div class="rating-section">
@@ -101,9 +99,9 @@
                         <div class="label">Appearance</div>
                         <div class="rating-bar" data-value="90"></div>
                         <div class="label">Calories</div>
-                        <div class="label">590</div>
+                        <div class="label">1160</div>
                         <div class="label">Price</div>
-                        <div class="label">$6.59</div>
+                        <div class="label">$8.99</div>
                     </div>
                 </div>
 
