--- a/restaurants/Wendys/davesSingle.html
+++ b/restaurants/Wendys/davesSingle.html
@@ -110,9 +110,182 @@
         </div>
         
     </div>
+
+
+    
     <div class="more-info">
         <h3>More Information</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="info-columns">
+          <div class="nutrition-table">
+            <table class="styled-table2">
+                <tbody>
+                    <tr>
+                        <td>Calories</td>
+                        <td>590</td>
+                    </tr>
+                    <tr>
+                        <td>Total Fat</td>
+                        <td>37g</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;Saturated Fat</td>
+                        <td>15g</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;Trans Fat</td>
+                        <td>1.5g</td>
+                    </tr>
+                    <tr>
+                        <td>Cholesterol</td>
+                        <td>80mg</td>
+                    </tr>
+                    <tr>
+                        <td>Sodium</td>
+                        <td>1050mg</td>
+                    </tr>
+                    <tr>
+                        <td>Total Carbs</td>
+                        <td>27g</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;Dietary Fiber</td>
+                        <td>2g</td>
+                    </tr>
+                    <tr>
+                        <td>&nbsp;&nbsp;&nbsp;&nbsp;Total Sugars</td>
+                        <td>8g</td>
+                    </tr>
+                    <tr>
+                        <td>Protein</td>
+                        <td>29g</td>
+                    </tr>
+                    <tr>
+                        <td>Calcium</td>
+                        <td>15% DV</td>
+                    </tr>
+                    <tr>
+                        <td>Iron</td>
+                        <td>25% DV</td>
+                    </tr>
+                    <tr>
+                        <td>Potassium</td>
+                        <td>10% DV</td>
+                    </tr>
+                    <!-- and so on... -->
+                </tbody>
+            </table>
+          </div>
+
+          <div class="allergens">
+            <div class="allergen-grid">
+              <div class="allergen-item">
+                  <img src="../../images/egg.svg" alt="Egg">
+                  <p>Egg</p>
+              </div>
+              <div class="allergen-item">
+                  <img src="../../images/milk.svg" alt="Milk">
+                  <p>Milk</p>
+              </div>
+              <div class="allergen-item">
+                  <img src="../../images/soy.svg" alt="Soy">
+                  <p>Soy</p>
+              </div>
+              <div class="allergen-item">
+                  <img src="../../images/sesame.svg" alt="Sesame">
+                  <p>Sesame</p>
+              </div>
+              <div class="allergen-item">
+                  <img src="../../images/wheat.svg" alt="Wheat">
+                  <p>Wheat</p>
+              </div>
+              <!-- Add more allergens as needed -->
+          </div>
+          </div>
+          <div class="ingredients">
+            <table id="infoTable">
+              <thead>
+                <tr>
+                  <th>Ingredients</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="clickable">
+                  <td>Hamburger Patty</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Ground Beef, Salt. HAMBURGER PATTIES ARE COOKED ON THE SAME GRILL AS AND MAY COME IN CONTACT WITH INGREDIENTS THAT CONTAIN MILK AND SOY.</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Premium Bun</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Enriched Flour (Wheat Flour, Malted Barley Flour, Niacin, Reduced Iron, Thiamine Mononitrate, Riboflavin, Folic Acid), Water, High Fructose Corn Syrup and/or Sugar, Yeast, Soybean Oil, Contains less than 2% of each of the following: Ascorbic Acid (Vitamin C), Calcium Peroxide, Calcium Propionate (Added as a Preservative), Calcium Sulfate, Canola Oil, Citric Acid, Corn Starch, Dextrose, Enzymes, Maltodextrins, Modified Food Starch, Monocalcium Phosphate, Monoglycerides, Salt, Sodium Stearoyl Lactylate (SSL), Starch, Sunflower Oil, Vegetable Oil, Vegetable Proteins (Pea, Potato, Fava Bean), Wheat Dextrose, Wheat Flour, Wheat Gluten, Wheat Maltodextrins, Sesame Flour. CONTAINS: WHEAT, SESAME. BUNS ARE TOASTED IN A COMMON TOASTER WITH PRODUCTS THAT CONTAIN WHEAT, SOY, MILK, SESAME.</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>American Cheese Slice</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Milk, Cream, Water, Sodium Citrate, Salt, Contains 2% or less of Apocarotenal and Beta Carotene (Color), Cheese Culture, Citric Acid, Enzymes, Sorbic Acid (Preservative), Soy Lecithin. CONTAINS: MILK, SOY.</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Tomato</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Tomato</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Crinkle Cut Pickles</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Cucumber, Water, Distilled Vinegar, Salt, Calcium Chloride, Sodium Benzoate (Preservative), Lactic Acid, Natural Flavors, Polysorbate 80 and Turmeric.</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Mayonnaise</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Soybean Oil, Water, Egg Yolks, Corn Syrup, Distilled Vinegar, Salt, Mustard Seed, Calcium Disodium Edta (To Protect Flavor). CONTAINS: EGG.</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Lettuce</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Lettuce</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Ketchup</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Tomato Concentrate from Red Ripe Tomatoes, Distilled Vinegar, High Fructose Corn Syrup, Corn Syrup, Salt, Natural Flavoring, Spices, Onion Powder. CONTAINS EGG.</p>
+                  </td>
+                </tr>
+                <tr class="clickable">
+                  <td>Onion</td>
+                </tr>
+                <tr class="details">
+                  <td colspan="2">
+                    <p>Onion</p>
+                  </td>
+                </tr>
+                <!-- Add more items as needed -->
+              </tbody>
+            </table>
+          </div>
+      </div>
     </div>
 
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
@@ -153,6 +326,23 @@
         return "#CF597E"; // Red
     }
     });
+
+</script>
+
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const clickableRows = document.querySelectorAll('#infoTable .clickable');
+  
+  clickableRows.forEach(row => {
+    row.addEventListener('click', function() {
+      // Toggle the next sibling row with class 'details'
+      const detailsRow = this.nextElementSibling;
+      if (detailsRow && detailsRow.classList.contains('details')) {
+        detailsRow.style.display = detailsRow.style.display === 'none' ? 'table-row' : 'none';
+      }
+    });
+  });
+});
 
 </script>
 
