--- a/restaurants/Wendys/cheeseFries.html
+++ b/restaurants/Wendys/cheeseFries.html
@@ -75,18 +75,18 @@
                 <img src="images/cheeseFries.png" alt="Food Image">
                 <div class="color-palette">
                     <!-- Example color palette colors -->
-                    <div class="color-item" style="background-color: #969A40;" title="#969A40"></div>
-                    <div class="color-item" style="background-color: #AA4F2E;" title="#AA4F2E"></div>
-                    <div class="color-item" style="background-color: #505126;" title="#505126"></div>
-                    <div class="color-item" style="background-color: #A57011;" title="#A57011"></div>
-                    <div class="color-item" style="background-color: #BA773A;" title="#BA773A"></div>
+                    <div class="color-item" style="background-color: #C46506;" title="#C46506"></div>
+                    <div class="color-item" style="background-color: #933401;" title="#933401"></div>
+                    <div class="color-item" style="background-color: #FF0000;" title="#FF0000"></div>
+                    <div class="color-item" style="background-color: #BB5402;" title="#BB5402"></div>
+                    <div class="color-item" style="background-color: #E7A949;" title="#E7A949"></div>
                 </div>
             </div>
             <div class="rating-section">
                 
                 <div class="rating-grid">
                     <div class="average-score">
-                        Score: <span id="average-value">hi</span>
+                        Score: <span id="average-value"></span>
                     </div>
                     <div class="rating-items">
                         <div class="label">Flavor Profile</div>
@@ -102,9 +102,9 @@
                         <div class="label">Appearance</div>
                         <div class="rating-bar" data-value="90"></div>
                         <div class="label">Calories</div>
-                        <div class="label">590</div>
+                        <div class="label">370</div>
                         <div class="label">Price</div>
-                        <div class="label">$6.59</div>
+                        <div class="label">$4.39</div>
                     </div>
                 </div>
 
@@ -125,55 +125,55 @@
                 <tbody>
                     <tr>
                         <td>Calories</td>
-                        <td>590</td>
+                        <td>370</td>
                     </tr>
                     <tr>
                         <td>Total Fat</td>
-                        <td>37g</td>
+                        <td>20g</td>
                     </tr>
                     <tr>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;Saturated Fat</td>
-                        <td>15g</td>
+                        <td7g</td>
                     </tr>
                     <tr>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;Trans Fat</td>
-                        <td>1.5g</td>
+                        <td>0g</td>
                     </tr>
                     <tr>
                         <td>Cholesterol</td>
-                        <td>80mg</td>
+                        <td>25mg</td>
                     </tr>
                     <tr>
                         <td>Sodium</td>
-                        <td>1050mg</td>
+                        <td>780mg</td>
                     </tr>
                     <tr>
                         <td>Total Carbs</td>
-                        <td>27g</td>
+                        <td>38g</td>
                     </tr>
                     <tr>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;Dietary Fiber</td>
-                        <td>2g</td>
+                        <td>3g</td>
                     </tr>
                     <tr>
                         <td>&nbsp;&nbsp;&nbsp;&nbsp;Total Sugars</td>
-                        <td>8g</td>
+                        <td>0g</td>
                     </tr>
                     <tr>
                         <td>Protein</td>
-                        <td>29g</td>
+                        <td>9g</td>
                     </tr>
                     <tr>
                         <td>Calcium</td>
-                        <td>15% DV</td>
+                        <td>10% DV</td>
                     </tr>
                     <tr>
                         <td>Iron</td>
-                        <td>25% DV</td>
+                        <td>6% DV</td>
                     </tr>
                     <tr>
                         <td>Potassium</td>
-                        <td>10% DV</td>
+                        <td>15% DV</td>
                     </tr>
                     <!-- and so on... -->
                 </tbody>
@@ -183,24 +183,12 @@
           <div class="allergens">
             <div class="allergen-grid">
               <div class="allergen-item">
-                  <img src="../../images/egg.svg" alt="Egg">
-                  <p>Egg</p>
-              </div>
-              <div class="allergen-item">
                   <img src="../../images/milk.svg" alt="Milk">
                   <p>Milk</p>
               </div>
               <div class="allergen-item">
                   <img src="../../images/soy.svg" alt="Soy">
                   <p>Soy</p>
-              </div>
-              <div class="allergen-item">
-                  <img src="../../images/sesame.svg" alt="Sesame">
-                  <p>Sesame</p>
-              </div>
-              <div class="allergen-item">
-                  <img src="../../images/wheat.svg" alt="Wheat">
-                  <p>Wheat</p>
               </div>
               <!-- Add more allergens as needed -->
           </div>
@@ -214,75 +202,43 @@
               </thead>
               <tbody>
                 <tr class="clickable">
-                  <td>Hamburger Patty</td>
+                  <td>French Fries</td>
                 </tr>
                 <tr class="details">
                   <td colspan="2">
-                    <p>Ground Beef, Salt. HAMBURGER PATTIES ARE COOKED ON THE SAME GRILL AS AND MAY COME IN CONTACT WITH INGREDIENTS THAT CONTAIN MILK AND SOY.</p>
+                    <p>
+                      Potatoes, Vegetable Oil (Soybean, Canola, and/or Cottonseed Oils), Modified Food Starch (Potato, Corn, Tapioca), Rice Flour, Dextrin, Salt, Pea Starch, Leavening (Disodium Dihydrogen Pyrophosphate, Sodium Bicarbonate, Monocalcium Phosphate), Dextrose, Xanthan Gum, Disodium Dihydrogen Pyrophosphate (To Promote Color Retention). Cooked In Vegetable Oil (Soybean Oil, Vegetable Oil [May Contain One Or More Of The Following: Canola, Corn, Or Cottonseed], Hydrogenated Soybean Oil, Dimethylpolysiloxane [Anti-Foaming Agent]). Seasoned With Sea Salt. COOKED IN THE SAME OIL AS MENU ITEMS THAT CONTAIN WHEAT, MILK, EGG, SOY, SESAME, AND FISH.
+                    </p>
                   </td>
                 </tr>
                 <tr class="clickable">
-                  <td>Premium Bun</td>
+                  <td>Cheddar Cheese Sauce</td>
                 </tr>
                 <tr class="details">
                   <td colspan="2">
-                    <p>Enriched Flour (Wheat Flour, Malted Barley Flour, Niacin, Reduced Iron, Thiamine Mononitrate, Riboflavin, Folic Acid), Water, High Fructose Corn Syrup and/or Sugar, Yeast, Soybean Oil, Contains less than 2% of each of the following: Ascorbic Acid (Vitamin C), Calcium Peroxide, Calcium Propionate (Added as a Preservative), Calcium Sulfate, Canola Oil, Citric Acid, Corn Starch, Dextrose, Enzymes, Maltodextrins, Modified Food Starch, Monocalcium Phosphate, Monoglycerides, Salt, Sodium Stearoyl Lactylate (SSL), Starch, Sunflower Oil, Vegetable Oil, Vegetable Proteins (Pea, Potato, Fava Bean), Wheat Dextrose, Wheat Flour, Wheat Gluten, Wheat Maltodextrins, Sesame Flour. CONTAINS: WHEAT, SESAME. BUNS ARE TOASTED IN A COMMON TOASTER WITH PRODUCTS THAT CONTAIN WHEAT, SOY, MILK, SESAME.</p>
+                    <p>
+                      Water, Cheddar Cheese (Milk, Salt, Bacterial Culture, Microbial Enzyme), Milk, Butter (Cream, Salt), Modified Corn Starch, Canola Oil, Natural Flavor, Sodium Citrate, Salt, Whey Protein Concentrate, Tomato Concentrate, Xanthan Gum, Konjac, Annatto (Color), Citric Acid, Onion Juice Concentrate, Oleoresin Paprika (Paprika Extract, Sunflower Oil), Soy Lecithin. CONTAINS: MILK, SOY
+                    </p>
                   </td>
                 </tr>
                 <tr class="clickable">
-                  <td>American Cheese Slice</td>
+                  <td>Shredded Cheddar Cheese</td>
                 </tr>
                 <tr class="details">
                   <td colspan="2">
-                    <p>Milk, Cream, Water, Sodium Citrate, Salt, Contains 2% or less of Apocarotenal and Beta Carotene (Color), Cheese Culture, Citric Acid, Enzymes, Sorbic Acid (Preservative), Soy Lecithin. CONTAINS: MILK, SOY.</p>
+                    <p>
+                      Cheddar Cheese (Pasteurized Milk, Cheese Culture, Salt, Enzymes, Annatto Color), Potato Starch (Added to Prevent Caking), Natamycin (A Natural Mold Inhibitor). CONTAINS: MILK.
+                    </p>
                   </td>
                 </tr>
                 <tr class="clickable">
-                  <td>Tomato</td>
+                  <td>Salt</td>
                 </tr>
                 <tr class="details">
                   <td colspan="2">
-                    <p>Tomato</p>
-                  </td>
-                </tr>
-                <tr class="clickable">
-                  <td>Crinkle Cut Pickles</td>
-                </tr>
-                <tr class="details">
-                  <td colspan="2">
-                    <p>Cucumber, Water, Distilled Vinegar, Salt, Calcium Chloride, Sodium Benzoate (Preservative), Lactic Acid, Natural Flavors, Polysorbate 80 and Turmeric.</p>
-                  </td>
-                </tr>
-                <tr class="clickable">
-                  <td>Mayonnaise</td>
-                </tr>
-                <tr class="details">
-                  <td colspan="2">
-                    <p>Soybean Oil, Water, Egg Yolks, Corn Syrup, Distilled Vinegar, Salt, Mustard Seed, Calcium Disodium Edta (To Protect Flavor). CONTAINS: EGG.</p>
-                  </td>
-                </tr>
-                <tr class="clickable">
-                  <td>Lettuce</td>
-                </tr>
-                <tr class="details">
-                  <td colspan="2">
-                    <p>Lettuce</p>
-                  </td>
-                </tr>
-                <tr class="clickable">
-                  <td>Ketchup</td>
-                </tr>
-                <tr class="details">
-                  <td colspan="2">
-                    <p>Tomato Concentrate from Red Ripe Tomatoes, Distilled Vinegar, High Fructose Corn Syrup, Corn Syrup, Salt, Natural Flavoring, Spices, Onion Powder. CONTAINS EGG.</p>
-                  </td>
-                </tr>
-                <tr class="clickable">
-                  <td>Onion</td>
-                </tr>
-                <tr class="details">
-                  <td colspan="2">
-                    <p>Onion</p>
+                    <p>
+                      Sea Salt
+                    </p>
                   </td>
                 </tr>
                 <!-- Add more items as needed -->
