--- a/restaurants/Wendys/davesDouble.html
+++ b/restaurants/Wendys/davesDouble.html
@@ -84,7 +84,7 @@
                 
                 <div class="rating-grid">
                     <div class="average-score">
-                        Score: <span id="average-value">hi</span>
+                        Score: <span id="average-value"></span>
                     </div>
                     <div class="rating-items">
                         <div class="label">Flavor Profile</div>
@@ -211,7 +211,7 @@
             </thead>
             <tbody>
               <tr class="clickable">
-                <td>Hamburger Patty</td>
+                <td>Hamburger Patties</td>
               </tr>
               <tr class="details">
                 <td colspan="2">
