--- a/restaurants/Wendys/davesSingle.html
+++ b/restaurants/Wendys/davesSingle.html
@@ -86,7 +86,7 @@
                 
                 <div class="rating-grid">
                     <div class="average-score">
-                        Score: <span id="average-value">hi</span>
+                        Score: <span id="average-value"></span>
                     </div>
                     <div class="rating-items">
                         <div class="label">Flavor Profile</div>
